Fixed landing page layout on mobile, removed display of receiver email

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,20 +32,11 @@
       color: #777;
     }
   }
-  #scroll-carat {
-    position:absolute;
-    bottom:30px;
-    width:100%;
-    text-align:center;
-    color: #ddd;
-  }
 }
 
 #slide2 {
-  padding: 50px 20px;
-  h2.captivate {
-    font-size: 34px;
-  }
+  padding-top: 40px;
+  padding-bottom: 20px;
   img {
     max-height: 300px;
     max-width: 300px;
@@ -53,12 +44,10 @@
 }
 
 #slide3 {
-  padding: 50px 100px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-color: #9DB01D;
   color: white;
-  h2 {
-    font-size: 47px;
-  }
 }
 
 #slide4 {
@@ -67,10 +56,28 @@
 }
 
 #slide5 {
-  padding: 50px 100px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-color: #7C4D25;
   color: white;
-  h2 {
-    font-size: 38px;
+}
+
+@media (max-width: 768px) {
+  #slide1 {
+    #dalai-lama-quote {
+      width: 250px;
+      height: 250px;
+      line-height: 250px;
+      position: relative;
+      h1 {
+        font-size: 31px;
+      }
+      span {
+        bottom: 30px;
+        left: 70px;
+        width: 100px;
+        font-size: 21px;
+      }
+    }
   }
 }
